--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <h2 class = "heading">About <span>Me</span><span class = "animate scroll" style = "--i:1;"></span></h2>
 
         <div class = "about-img">
-            <img src="images/IMG ALLAN HOLANDA - SQUARE - BETTER.jpg" alt="">
+            <img src="images/IMG - ALLAN HOLANDA - FUNDO BRANCO 2 - SQUARE.jpg" alt="">
             <span class="circle-spin"></span>
             <span class = "animate scroll" style = "--i:2;"></span>
         </div>
@@ -487,6 +487,11 @@
                             <div class="certifys">
                                 <h3>Jornada Desenvolvedor</h3>
                                 <img src = "images/Primeiros passos para se tornar um desenvolvedor - EBAC_page-0001.jpg" class = "certifications">
+                            </div>
+
+                            <div class="certifys">
+                                <h3>Imersão Front-End</h3>
+                                <img src = "images/Imersão Front-End - Certified.jpg" class = "certifications">
                             </div>
     
                         </div>
