--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <h3>Software Developer</h3>
                 <span class = "animate" style = "--i:3;"></span>
             </div>
-            <p>Estudante de Ciência da Computação com amplos conhecimentos em linguagens de programação, banco de dados e desenvolvimento Salesforce. 
+            <p>Cientista da computação com amplos conhecimentos em linguagens de programação, banco de dados e desenvolvimento Salesforce. 
                 Habilidade em resolução de problemas, trabalho em equipe e aprendizagem rápida.
                 <span class = "animate" style = "--i:4;"></span>
             </p>
@@ -82,7 +82,7 @@
         <div class="about-content">
             <h3>Software Developer<span class = "animate scroll" style = "--i:3;"></span></h3>
             <p>Eu sou um amante de tecnologia com fome de conhecimento, procuro sempre agregar informação e evoluir minhas habilidades com os mais diversos tipos de ferramentas disponíveis no mercado, possuo grande aptidão para solucionar problemas,
-                esse é o motivo pelo qual o desenvolvimento de softwares me encantou; possuo pouco mais de 2 anos de experiência com sistemas Salesforce, atuando como auxiliar em consultorias, administrador e desenvolvedor de soluções.
+                esse é o motivo pelo qual o desenvolvimento de softwares me encantou; carrego de bagagem pouco mais de 4 anos de experiência com sistemas Salesforce, atuando como auxiliar em consultorias, administrador e desenvolvedor de soluções.
 
                 <span class = "animate scroll" style = "--i:4;"></span>
             </p>
@@ -211,7 +211,7 @@
                         </div>
 
                         <div class="progress">
-                            <h3>Salesforce <span>80%</span></h3>
+                            <h3>Salesforce <span>90%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
 
@@ -221,7 +221,7 @@
                         </div>
 
                         <div class="progress">
-                            <h3>SCRUM<span>60%</span></h3>
+                            <h3>SCRUM<span>75%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
 
