--- a/index.html
+++ b/index.html
@@ -155,9 +155,29 @@
 
                         <div class = "content">
 
-                            <div class = "year"><i class = 'bx bxs-calendar'></i> 2024 - o momento </div>
-                            <h3 id = "experienceH3">Desenvolvedor Salesforce Jr - Stage Consulting</h3>
+                            <div class = "year"><i class = 'bx bxs-calendar'></i> Jan 2024 - Dez 2024 </div>
+                            <h3 id = "experienceH3">Engenheiro de Software (Salesforce) Junior - Stage Consulting</h3>
                             <p id = "experienceP">Desenvolvimento de soluções em organizações Salesforce.</p>
+
+                        </div>
+
+                    </div>
+                    <span class = "animate scroll" style = "--i:5;"></span>
+
+                </div>
+
+                <div class="education-box">
+
+                    <div class = "education-content">
+
+                        <div class = "content">
+
+                            <div class = "year"><i class = 'bx bxs-calendar'></i> Jan 2025 - o momento </div>
+                            <h3 id = "experienceH3">Engenheiro de Software (Salesforce) Pleno - Stage Consulting</h3>
+                            <p id = "experienceP">Desenvolvimento de soluções em organizações Salesforce.<br/>
+                                Auxílio em consultorias com o cliente.<br/>
+                                Sustentação de sistemas legados no front e no back-end.
+                            </p>
 
                         </div>
 
