feat: Adding Image

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <h2 class = "heading">About <span>Me</span><span class = "animate scroll" style = "--i:1;"></span></h2>
 
         <div class = "about-img">
-            <img src="images/IMG - ALLAN HOLANDA - FUNDO BRANCO 2 - SQUARE.jpg" alt="">
+            <img src="images/IMG - ALLAN HOLANDA.png" alt="">
             <span class="circle-spin"></span>
             <span class = "animate scroll" style = "--i:2;"></span>
         </div>
